--- a/express/package.json
+++ b/express/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.19.2",
@@ -19,6 +20,5 @@
     "sequelize": "^6.35.2",
     "uuid": "^3.3.3",
     "vue": "^3.4.21"
-  },
-  "devDependencies": {}
+  }
 }
