--- a/web/package.json
+++ b/web/package.json
@@ -17,15 +17,16 @@
     "@antv/l7-maps": "^2.20.19",
     "@turf/turf": "^6.5.0",
     "ant-design-vue": "4.x",
+    "autofit.js": "^3.1.0",
     "cesium": "^1.116.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "exif-js": "^2.3.0",
     "lodash": "^4.17.21",
+    "md-editor-v3": "^4.15.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "md-editor-v3": "^4.15.2",
     "vue-router": "^4.2.5"
   },
   "eslintConfig": {
