--- a/express/package.json
+++ b/express/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^7.0.0",
     "axios": "^1.7.2",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
