--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "md-editor-v3": "^4.15.2",
     "nprogress": "^0.2.0",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
