--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@antv/l7": "^2.20.5",
     "@antv/l7-maps": "^2.20.19",
     "@turf/turf": "^6.5.0",
+    "@vueuse/core": "^10.11.0",
     "ant-design-vue": "4.x",
     "autofit.js": "^3.1.0",
     "cesium": "^1.116.0",
