--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "md-editor-v3": "^4.15.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "vite-plugin-vue-devtools": "^7.3.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
