--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@antv/l7": "^2.22.0",
     "@antv/l7-maps": "^2.22.0",
+    "@tresjs/cientos": "^3.9.0",
+    "@tresjs/core": "^4.2.3",
     "@turf/turf": "^6.5.0",
     "@vueuse/core": "^10.11.0",
     "ant-design-vue": "4.x",
@@ -24,6 +26,8 @@
     "md-editor-v3": "^4.15.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "three": "^0.167.0",
+    "tweakpane": "^4.0.4",
     "vite-plugin-vue-devtools": "^7.3.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
